--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: CTSgetR
 Type: Package
 Title: Translation between chemical identifiers using the Chemical Translation
     System (CTS)
-Version: 1.2
+Version: 1.2.1
 Date: 2016-05-21
 Author: Dmitry Grapov
 Maintainer: <dgrapov@gmail.com>
@@ -13,4 +13,5 @@ Suggests:
     testthat
 RoxygenNote: 5.0.1
 Imports:
-    httr
+    httr,
+    utils
